examples/kubernetes-kafka/kafka-sw-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka-broker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
        zgroup: kafkaTestApp
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka
        ports:
        - containerPort: 9092
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 30
          failureThreshold: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zook
        zgroup: kafkaTestApp
    spec:
      containers:
      - name: zookeeper
        image: digitalwonderland/zookeeper
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zook
  labels:
    app: zook
spec:
  ports:
  - port: 2181
    name: zookeeper-port
    targetPort: 2181
    protocol: TCP
  selector:
    app: zook
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: kafka-port
    targetPort: 9092
    protocol: TCP
  selector:
    app: kafka
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: empire-hq
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: empire-hq
        zgroup: kafkaTestApp
    spec:
      containers:
      - name: empire-hq
        image: cilium/kafkaclient
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: empire-outpost-8888
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: empire-outpost
        outpostid: "8888"
        zgroup: kafkaTestApp
    spec:
      containers:
      - name: empire-outpost-8888
        image: cilium/kafkaclient
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: empire-outpost-9999
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: empire-outpost
        outpostid: "9999"
        zgroup: kafkaTestApp
    spec:
      containers:
      - name: empire-outpost-9999
        image: cilium/kafkaclient
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: empire-backup
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: empire-backup
        zgroup: kafkaTestApp
    spec:
      containers:
      - name: empire-backup
        image: cilium/kafkaclient
